--- a/pom.xml
+++ b/pom.xml
@@ -2,24 +2,18 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>Vitam-Schema</groupId>
   <artifactId>Vitam-Schema</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <version>0.0.1</version>
   <dependencies>
   	<dependency>
   		<groupId>VitamCommon</groupId>
   		<artifactId>VitamCommon</artifactId>
   		<version>0.0.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.11</version>
+  		<scope>test</scope>
   	</dependency>
   </dependencies>
     <reporting>
@@ -49,5 +43,49 @@
         </configuration>
       </plugin>
     </plugins>
-  </reporting>
+ <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+          <fork>true</fork>
+          <optimize>true</optimize>
+          <showDeprecation>true</showDeprecation>
+          <showWarnings>true</showWarnings>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  <name>VitamSchemaBuilder</name>
+  <scm>
+    <url>https://192.168.56.103/scm/git/VitamSchemaBuilder</url>
+    <connection>https://192.168.56.103/scm/git/VitamSchemaBuilder</connection>
+  </scm>
+  <issueManagement>
+    <system>redmine</system>
+    <url>https://192.168.56.103/redmine/projects/vitamschemabuilder</url>
+  </issueManagement>
+  <ciManagement>
+    <system>jenkins</system>
+    <url>https://192.168.56.103/jenkins/</url>
+  </ciManagement>
+  <distributionManagement>
+    <repository>
+        <id>depl</id>
+        <name>Internal Releases</name>
+        <url>http://127.0.0.1/nexus/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+        <id>depl</id>
+        <name>Internal Releases</name>
+        <url>http://127.0.0.1/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>  </reporting>
 </project>
